# ChromaPakZ

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
.cursor/rules/: chromapakz.md
.github/workflows/: ci.yml  pages.yml  release.yml
demo/: index.html
docs/: API.md  EVALUATION.md  FORMAT.md  RELEASING.md
examples/: tum_fr1desk.py
experiments/webcodecs-lossless/: headless.html  index.html  png16-test.mjs  probe.js  run.mjs  smoke-demo.mjs
native/: build.sh  chromapakz.cpp  chromapakz.h  dccli.cpp  depthcodec.cpp  depthcodec.h
native/wasm/: build-wasm.sh  dc_vp9.cpp  dc_vp9.h  gen-decode-ref.mjs
python/: benchmark_codecs.py  depthcodec.py  ingest.py  make_synthetic_rgbd.py  plot_rd.py  webm_inspect.py
python/chromapakz/: __init__.py
scripts/: install-libvpx-macos.sh  install-libvpx.sh
src/: chromapakz-core.js  chromapakz.js  depthcodec.js  signals.js  webm.js
src/backend/: decode-ref.js  probe.js  select.js  webcodecs.js
src/backend/wasm/: decode.js  encode.js  vp9-decode.js  vp9-decode.wasm  vp9-encode.js  vp9-encode.wasm
tests/: cross_interop.py  ffmpeg_interop.py  js_metadata_v2.mjs  js_quant.mjs  js_signals.mjs  js_wasm_roundtrip.mjs  roundtrip.py  stream_interop.py  webm_stream.mjs
tests/browser/: fallback.html  run.mjs
tests/fixtures/: regen_stream.mjs  stream.webm  stream_depth.u16
